specs/radarr/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: radarr 

spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
